--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,24 @@ body {
 main {
     margin: 50px auto;
     width: 80%;
+    text-align: center;
 }
 
 h1 {
     font-family: 'Rye';
     font-size: 5rem;
     text-align: center;
+    margin-bottom: 100px;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+.cards {
+    width: 300px;
+    height: 400px;
+    margin: 0 auto;
+    border: 1px solid white;
+    border-radius: 10px;
 }
