--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,27 @@ h2 {
 }
 
 .cards {
-    width: 300px;
-    height: 400px;
+    width: 370px;
+    height: 335px;
     margin: 0 auto;
     border: 1px solid white;
     border-radius: 10px;
+}
+
+img {
+    
+}
+
+#dealerCard1,
+#playerCard1 {
+    position: absolute;
+    margin: 10px 0 0 -60px;
+}
+
+#dealerCard2,
+#playerCard2 {
+    position: relative;
+    left: 60px;
+    top: 10px;
+
 }
